# steal_password_from_browser

./: .gitignore  README.md  deno.jsonc  package.json  tailwind.config.js  tsconfig.json
.github/workflows/: ci.yml
public/: App.tsx  Browserslist.tsx  Passwordslist.tsx  index.html  index.tsx  tauri.ts
src/: App.tsx  Browserslist.tsx  Passwordslist.tsx  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
